--- a/.gitignore
+++ b/.gitignore
@@ -1,31 +1,31 @@
-info/schema.mwb.bak
-.kateproject
-.kateproject.d
-nbproject
-._*
-.~lock.*
-sftp*
-.buildpath
-.DS_Store
-.idea
-.project
-.settings
-composer.lock
-vendor/bin
+/info/schema.mwb.bak
+/.kateproject
+/.kateproject.d
+/nbproject
+/._*
+/.~lock.*
+/sftp*
+/.buildpath
+/.DS_Store
+/.idea
+/.project
+/.settings
+/composer.lock
+/vendor/bin
 
 
-config/autoload/local.php
-config/autoload/*.local.php
-access.log
-error.log
+/config/autoload/local.php
+/config/autoload/*.local.php
+/access.log
+/error.log
 
-data/log/*
-data/tmp/*
-data/cache/*
-data/ZfcDatagrid/*
+/data/log/*
+/data/tmp/*
+/data/cache/*
+/data/ZfcDatagrid/*
 
-sftp*
+/sftp*
 
-public_html/uploads/*
-.directory 
-composer.json
+/public_html/uploads/*
+/.directory 
+/composer.json
